[package]
name = "capsem-process"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
capsem-core = { path = "../capsem-core" }
capsem-logger = { path = "../capsem-logger" }
capsem-proto = { path = "../capsem-proto" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio-unix-ipc.workspace = true
futures.workspace = true
nix = { version = "0.29", features = ["fs", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest.workspace = true
axum = { workspace = true, features = ["ws"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8.7"
