[package]
name = "capsem-proto"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
bincode = "1"
