[package]
name = "capsem-security-engine"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
blake3 = "1"
capsem-proto = { path = "../capsem-proto" }
cel = { version = "0.13", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "security_engine_cel"
harness = false

[lints]
workspace = true
