[package]
name = "capsem-tray"
version.workspace = true
edition = "2021"

[[bin]]
name = "capsem-tray"
path = "src/main.rs"

[dependencies]
tray-icon = "0.22"
muda = "0.17"
png = "0.18"
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
