[package]
name = "capsem-tray"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "capsem-tray"
path = "src/main.rs"

[dependencies]
capsem-core = { path = "../capsem-core" }
capsem-guard = { path = "../capsem-guard" }
tray-icon = "0.22"
muda = "0.17"
png = "0.18"
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSEvent"] }
objc2-foundation = "0.3"

[lints]
workspace = true
