[package]
name = "capsem"
version.workspace = true
edition = "2021"

[[bin]]
name = "capsem"
path = "src/main.rs"

[dependencies]
capsem-core = { path = "../capsem-core" }
capsem-proto = { path = "../capsem-proto" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio-unix-ipc.workspace = true
reqwest.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
nix = { version = "0.29", features = ["term", "process", "signal", "fs", "user"] }

[dev-dependencies]
tempfile = "3"
